[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pyaedt"
dynamic = ["version"]
description = "High-level Python API for Ansys Electronics Desktop Framework"
readme = "README.md"
requires-python = ">=3.8,<4"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
classifiers = [
    # General classifiers
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # Additional specific classifiers
    "Operating System :: OS Independent",
]

dependencies = [
    "pyvista[io]>=0.38.0,<0.45",
]


[tool.setuptools.dynamic]
version = {attr = "ansys.aedt.core.__version__"}
