[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaedt"
dynamic = ["version"]
description = "High-level Python API for Ansys Electronics Desktop Framework"
requires-python = ">=3.10,<4"
license = "MIT"
license-files = ["../LICENSE"]
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
classifiers = [
    # General classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Scientific/Engineering :: Information Analysis",
    # Additional specific classifiers
    "Operating System :: OS Independent",
]

dependencies = [
    "grpcio>=1.50.0,<1.77",
    "jsonschema",
    "psutil",
    "pyedb>=0.24.0,!=0.28.0",
    "tomli; python_version < '3.11'",
    "tomli-w",
    "pyyaml",
    "defusedxml>=0.7,<8.0",
    "numpy>=1.20.0,<2.3",
    "pydantic>=2.6.4,<2.13",
]

[project.optional-dependencies]
unit-tests = [
    "pytest>=7.4.0,<9.1",
    "pytest-cov>=4.0.0,<7.1",
    "pytest-testmon>=2.0.0,<3.0",
    "mock>=5.1.0,<5.3",
    "fpdf2",
    "requests",
    "rpyc>=6.0.0,<6.1",
    "typer>=0.20.0",
    "openpyxl>=3.1.0,<3.3",
]
integration-tests = [
    "matplotlib>=3.5.0,<3.11",
    "pytest-testmon>=2.0.0,<3.0",
    "pandas>=1.1.0,<2.4",
    "pyaedt[unit-tests]",
]
tests = [
    "ansys-tools-visualization-interface",
    "osmnx>=1.1.0,<2.1",
    "pyaedt[integration-tests]",
    "pytest-timeout>=2.3.0,<2.5",
    "pytest-xdist>=3.5.0,<3.9",
    "pytest-testmon>=2.0.0,<3.0",
    "pyvista[io]>=0.38.0,<0.47",
    "scikit-rf>=0.30.0,<1.10",
    "tables",
    "cryptography",
]
dotnet = [
    "ansys-pythonnet>=3.1.0rc3",
    "cffi>=1.16.0,<2.1; platform_system=='Linux'",
    "dotnetcore2==3.1.23; platform_system=='Linux'",
    "pywin32>=303; platform_system=='Windows'",
]
doc = [
    "ansys-sphinx-theme>=1.0.0,<1.8",
    "jupyter",
    "numpydoc==1.10.0",
    "recommonmark",
    "Sphinx>=7.1.0,<8.3",
    "sphinx-autobuild==2024.10.3",
    "sphinx-copybutton>=0.5.0,<0.6",
    "sphinx-gallery>=0.14.0,<0.21",
    "sphinx_design>=0.4.0,<0.7",
    "pyvista[io]>=0.38.0,<0.47",
    "ansys-tools-visualization-interface",
    "fpdf2",
    "rpyc>=6.0.0,<6.1",
]
graphics = [
    "ansys-tools-visualization-interface",
    "pyvista[io]>=0.38.0,<0.47",
    "matplotlib>=3.5.0,<3.11",
    "vtk>=9.0,<9.6",
    "fpdf2",
]
jupyter = [
    "jupyterlab>=3.6.0,<4.6",
    "ipython>=7.30.0,<9.1",
]
all = [
    "matplotlib>=3.5.0,<3.11",
    "openpyxl>=3.1.0,<3.3",
    "osmnx>=1.1.0,<2.1",
    "pandas>=1.1.0,<2.4",
    "pyvista[io]>=0.38.0,<0.47",
    "fast-simplification>=0.1.7",
    "ansys-tools-visualization-interface",
    "tables; python_version >= '3.10'",
    "scikit-rf>=0.30.0,<1.10",
    "requests",
    "typer>=0.20.0",
    "fpdf2",
    "rpyc>=6.0.0,<6.1",
    "uv>=0.8.17",
]
examples = [
    "imageio>=2.34.0,<2.38",
    "matplotlib>=3.5.0,<3.11",
    "openpyxl>=3.1.0,<3.3",
    "osmnx>=1.1.0,<2.1",
    "pandas>=1.1.0,<2.4",
    "pyvista>=0.38.0,<0.47",
    "fast-simplification>=0.1.7",
    "joblib>=1.4.0,<1.6",
    "plotly>=6.0,<6.6",
    "scikit-rf>=0.30.0,<1.10",
    "fpdf2",
    "rpyc>=6.0.0,<6.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["../src"]

[tool.setuptools.package-data]
"ansys.aedt.core.syslib" = ["**/*.so", "**/*.pyd", "**/*.license"]

[tool.setuptools.dynamic]
version = {attr = "ansys.aedt.core.__version__"}

[project.urls]
Bugs = "https://github.com/ansys/pyaedt/issues"
Documentation = "https://aedt.docs.pyansys.com"
Source = "https://github.com/ansys/pyaedt"
Discussions = "https://github.com/ansys/pyaedt/discussions"
Releases = "https://github.com/ansys/pyaedt/releases"
Changelog = "https://github.com/ansys/pyaedt/blob/main/doc/source/changelog.rst"

[project.scripts]
pyaedt = "ansys.aedt.core.cli:app"